--- a/schedule.html
+++ b/schedule.html
@@ -457,66 +457,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Aug 31, Sept 2</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Course introduction, Hello World of Animation</strong> <a id="week01"></a></p>
+<p><strong>Course introduction, Hello World</strong> <a id="week01"></a></p>
 </div>
 <div class="paragraph">
-<p>Introduction. Preliminaries. Math, animation/game design patterns, C++ review</p>
+<p>Introduction. Preliminaries. Math and C++ review</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Read</strong>: Parent 1.1, 1.3</p>
+<p><a href="week01.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p><strong>Lab 00</strong>: <a href="asst00.html">Hello CS317</a> <strong>Due Sept 2 (in lab)</strong></p>
-</li>
-<li>
-<p><strong>Assignment 01</strong>: link:Labs/lab1-hello.html[Hello Animation! <strong>Due Sept 9</strong></p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p><strong>Lecture</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="todo">Overview of the course</a></p>
-</li>
-<li>
-<p>Event-based architectures, <a href="https://gameprogrammingpatterns.com/game-loop.html">Game loop</a>, <a href="http://gameprogrammingpatterns.com/update-method.html">Update method</a></p>
-</li>
-<li>
-<p>Particle moving in a circle. <a href="Labs/circle.cpp.txt">AniTk</a>/<a href="Labs/circle.pde.txt">Processing</a>/<a href="circle.cs.txt">Unity</a></p>
-</li>
-<li>
-<p>Particle with velocity. <a href="Labs/particle.cpp.txt">AniTk</a>/<a href="Labs/particle.pde.txt">Processing</a>/<a href="Labs/particle.cs.txt">Unity</a></p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p><strong>C++/cmake/git Resources</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="https://www.udemy.com/course/free-learn-c-tutorial-beginners/">C++ Course</a></p>
-</li>
-<li>
-<p><a href="Labs/TODO">Getting started with C++</a></p>
-</li>
-<li>
-<p>Git workshop: <a href="https://github.com/BrynMawr-CS312-2021/git-workshop">Notes</a>,<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=aa6a31bf-a4f1-419a-a2ed-acd30182820f">Video</a></p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p><strong>Math resources</strong></p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6</p>
+<p><strong>Assignment 00</strong>: <a href="asst00.html">Hello CS317!</a> <strong>Due Sept 9</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -525,33 +477,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sept 7,9</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Interpolation</strong> <a id="week02"></a></p>
+<p><strong>First animations</strong> <a id="week02"></a></p>
 </div>
 <div class="paragraph">
-<p>Linear and cubic interpolation. Bezier curves, Bernstein polynomials. De Casteljau&#8217;s algorithm.</p>
+<p>Animation design patterns; Points, vectors, and time; Oscillations, forward and circular movement.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: TODO (Parent book)</p>
+<p><a href="week02.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p>Additional references: Lengyel: 11.3</p>
-</li>
-<li>
-<p>Linear interpolation <a href="Labs/colorLerp1.cpp.txt">colorLerp1</a>/<a href="Labs/colorLerp2.cpp.txt">colorLerp2</a>/<a href="Labs/particleLerp.cpp.txt">particleLerp</a></p>
-</li>
-<li>
-<p><a href="Labs/bezier.svg">Inkscape bezier curve</a> (open file in Inkscape to play with it)</p>
-</li>
-<li>
-<p>de Casteljau&#8217;s algorithm: <a href="Labs/deCasteljau.gif">Demo 1</a>/<a href="Labs/deCasteljau-curlyQ.gif">Demo 2</a></p>
-</li>
-<li>
-<p>TODO: Other interpolation types</p>
-</li>
-<li>
-<p><strong>Assignment 02:</strong> <a href="Labs/lab2-interp.html">Howl&#8217;s moving casteljau</a>: <strong>Due Sept 16</strong></p>
+<p><strong>Assignment 01</strong>: <a href="Labs/lab1-hello.html">Hello Animation!</a> <strong>Due Sept 16</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -560,30 +497,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">3</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sept 14,16</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Splines</strong> <a id="week03"></a></p>
+<p><strong>Interpolation</strong> <a id="week03"></a></p>
 </div>
 <div class="paragraph">
-<p>Catmull-Rom splines. Hermite Splines.</p>
+<p>Linear and cubic interpolation. Bezier curves, Bernstein polynomials. De Casteljau&#8217;s algorithm.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Lengyel: 11.1-11.4</p>
+<p><a href="week03.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p>Solving equations using Eigen: <a href="Labs/solveEqn.cpp.txt">Example1</a>/<a href="Labs/hermiteEx.cpp.txt">Example2</a></p>
+<p><strong>Assignment 02:</strong> <a href="Labs/lab2-interp.html">Howl&#8217;s moving casteljau</a>: <strong>Due Sept 23</strong></p>
 </li>
 <li>
-<p>Spline Example: <a href="CatmullRomExample.pdf">Catmull-Rom</a>/<a href="HermiteExample.pdf">Hermite</a></p>
-</li>
-<li>
-<p>Hermite endpoint conditions: <a href="Labs/hermiteClamped.gif">Clamped</a>/<a href="Labs/hermiteNatural.gif">Natural</a></p>
-</li>
-<li>
-<p><strong>Assignment 03:</strong> <a href="Labs/lab3-spline.html">Good times with splines.</a>: <strong>Due Sept 23</strong></p>
-</li>
-<li>
-<p><a href="Q1Guide.html">TODO: Quiz Study Guide</a></p>
+<p><a href="Q1Guide.html">Quiz1 Study Guide</a>: Math preliminaries and first animations</p>
 </li>
 </ul>
 </div></div></td>
@@ -592,33 +520,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sept 21,23</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Rotations I</strong> <a id="week04"></a></p>
+<p><strong>Interpolation</strong> <a id="week04"></a></p>
 </div>
 <div class="paragraph">
-<p>Rotations. Matrices. Euler angles. Gimbol lock.</p>
+<p>Catmull-Rom splines. Hermite Splines.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="MathNotes.2019.pdf">Math notes (Coordinate systems and matrices)</a></p>
+<p><strong>Sept 21</strong> Quiz1</p>
 </li>
 <li>
-<p><a href="EulerAngles.html">Euler angle conversions</a></p>
+<p><a href="week04.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p><a href="EulerExamples.pdf">Sample problems with answers</a></p>
-</li>
-<li>
-<p>Lengyel: 3.1, 4.3</p>
-</li>
-<li>
-<p>Quiz</p>
-</li>
-<li>
-<p>Read: TODO</p>
-</li>
-<li>
-<p><strong>Assignment 04:</strong> <a href="Labs/lab4-euler.html">Spinning teapots</a>: <strong>Due Sept 30</strong></p>
+<p><strong>Assignment 03:</strong> <a href="Labs/lab3-spline.html">The Catmull-Rom Com</a>: <strong>Due Sept 30</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -627,33 +543,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sept 28,30</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Quaternions</strong> <a id="week05"></a></p>
+<p><strong>Rotations I: Euler angles</strong> <a id="week05"></a></p>
 </div>
 <div class="paragraph">
-<p>General angle-axis rotations. Quaternions.  Slerp. Interpolating rotations</p>
+<p>Rotations. Matrices. Euler angles. Gimbol lock.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Lengyel Appendix A, 4.3, 4.6.1, 4.6.2, 4.6.3</p>
+<p><a href="week05.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p><a href="QuazyQuaternions.pdf">Quazy quaternions</a></p>
+<p><strong>Assignment 04:</strong> <a href="Labs/lab4-rotations.html">You spin me round</a>: <strong>Due Oct 7</strong></p>
 </li>
 <li>
-<p><a href="https://dl.acm.org/citation.cfm?doid=325334.325242">Animating rotation with quaternion curves (seminal paper)</a></p>
-</li>
-<li>
-<p><a href="SlerpExample.pdf">Slerp example</a></p>
-</li>
-<li>
-<p>Read:</p>
-</li>
-<li>
-<p><strong>Assignment 05:</strong> <a href="lab5-quat.html">Quazy quaternions</a>: <strong>Due Oct 7</strong></p>
-</li>
-<li>
-<p><a href="Q2Guide.html">Quiz Study Guide</a></p>
+<p><a href="Q2Guide.html">Quiz2 Study Guide</a>: Interpolation and splines</p>
 </li>
 </ul>
 </div></div></td>
@@ -662,21 +566,21 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 5,7</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Transformations</strong> <a id="week06"></a></p>
+<p><strong>Rotations II: Quaternions</strong> <a id="week06"></a></p>
 </div>
 <div class="paragraph">
-<p>Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
+<p>General angle-axis rotations. Quaternions.  Slerp. Interpolating rotations</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Lengyel Chpt 4</p>
+<p><strong>Oct 5</strong> Quiz2</p>
 </li>
 <li>
-<p><strong>Assignment 06:</strong> <a href="Labs/lab6-fk.html">Building character</a>: <strong>Due Oct 21 (after break)</strong></p>
+<p><a href="week06.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p>Quiz</p>
+<p><strong>Assignment 05:</strong> <a href="Labs/lab5-quat.html">Quazy Quaternions</a>: <strong>Due Oct 21 (after fall break)</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -699,7 +603,27 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 19,21</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Characters and motion</strong> <a id="week07"></a></p>
+<p><strong>Transformations</strong> <a id="week08"></a></p>
+</div>
+<div class="paragraph">
+<p>Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Lengyel Chpt 4, Parent Chpt 2</p>
+</li>
+<li>
+<p><strong>Assignment 06:</strong> <a href="Labs/lab6-fk.html">Building character</a>: <strong>Due Oct 28</strong></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 28</p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Characters and motion</strong> <a id="week09"></a></p>
 </div>
 <div class="paragraph">
 <p>More Articulated Characters. Skeleton Example. Tree traversal review. Forward Kinematics.
@@ -708,34 +632,19 @@ Motion. Poses. Motion Representation. Motion Capture. Procedural animation.</p>
 <div class="ulist">
 <ul>
 <li>
+<p><strong>NO CLASS Oct 26!!</strong></p>
+</li>
+<li>
 <p>Butterfly: <a href="Labs/AButterfly.cpp.txt">Skeleton I</a></p>
 </li>
 <li>
 <p><a href="SkeletonExamples.pd">Skeleton FK Example</a></p>
 </li>
 <li>
-<p>Read:</p>
+<p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
 </li>
 <li>
-<p><strong>Assignment 07:</strong> <a href="Labs/lab7-motion.html">Motion</a>: <strong>Due Oct 28</strong></p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Oct 26,28</p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Motion Editing</strong> <a id="week09"></a></p>
-</div>
-<div class="paragraph">
-<p>Motion editing. Blending. Splicing. Interpolation. Transitions.
-Transitions. Reorienting a motion. Crossfading.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><strong>Assignment 08:</strong> <a href="Labs/lab8-blend.html">Cross-fade away!</a>: <strong>Due Nov 4</strong></p>
+<p><strong>Assignment 07:</strong> <a href="Labs/lab7-motion.html">Motion</a>: <strong>Due Nov 4</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -744,7 +653,28 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 2,4</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Inverse kinematics</strong> <a id="week10"></a></p>
+<p><strong>Motion Editing</strong> <a id="week10"></a></p>
+</div>
+<div class="paragraph">
+<p>Motion editing. Blending. Splicing. Interpolation. Transitions.
+Transitions. Reorienting a motion. Crossfading.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Quiz3 Nov 4</strong></p>
+</li>
+<li>
+<p><strong>Assignment 08:</strong> <a href="Labs/lab8-blend.html">Cross-fade away!</a>: <strong>Due Nov 11</strong></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 9,11</p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Inverse kinematics</strong> <a id="week11"></a></p>
 </div>
 <div class="paragraph">
 <p>Analytical method for two-link chain. CCD Algorithm.</p>
@@ -755,16 +685,19 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <p><a href="Labs/ikccd.ogv">CCD demo</a></p>
 </li>
 <li>
-<p><strong>Assignment 09:</strong> <a href="Labs/lab9-ik.html">Reach for your goals</a>: <strong>Due Nov 11</strong></p>
+<p><strong>Assignment 09:</strong> <a href="Labs/lab9-ik.html">Reach for your goals</a>: <strong>Due Nov 18</strong></p>
+</li>
+<li>
+<p><a href="Q4Guide.html">Quiz4 Study Guide</a>: Transformations</p>
 </li>
 </ul>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 9,11</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 16,18</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Physics</strong> <a id="week11"></a></p>
+<p><strong>Physics</strong> <a id="week12"></a></p>
 </div>
 <div class="paragraph">
 <p>Physics. Intro to rigid body simulation.</p>
@@ -793,27 +726,10 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <p>Simple force particle: <a href="Labs/forceParticle.cpp.txt">Code</a></p>
 </li>
 <li>
-<p><strong>Assignment 10:</strong> <a href="Labs/Lab10-physics.html">Use the force</a>: <strong>Due Nov 18</strong></p>
-</li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 16,18</p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Steering behaviors</strong> <a id="week12"></a></p>
-</div>
-<div class="paragraph">
-<p>Steering behaviors.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="http://www.red3d.com/cwr/steer/gdc99">Boids</a></p>
+<p><strong>Assignment 10:</strong> <a href="Labs/Lab10-physics.html">Use the force</a>: <strong>Due Nov 22</strong></p>
 </li>
 <li>
-<p><strong>Assignment 11:</strong> <a href="Labs/lab10-steering.html">Flocks</a>: <strong>Due Nov 24</strong></p>
+<p><strong>Quiz4 Nov 16</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -822,15 +738,18 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 23 (No class Thursday, Thanksgiving)</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Skinning</strong> <a id="week13"></a></p>
+<p><strong>Steering behaviors</strong> <a id="week13"></a></p>
 </div>
 <div class="paragraph">
-<p>Meshes and skinning.</p>
+<p>Steering behaviors. Crowd simulation.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.skinning.org/direct-methods.pdf">Skinning short course (SIGGRAPH 2014)</a></p>
+<p><a href="http://www.red3d.com/cwr/steer/gdc99">Boids</a></p>
+</li>
+<li>
+<p><strong>Assignment 11:</strong> <a href="Labs/lab10-steering.html">Flocks</a>: <strong>Due Dec 2</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -839,21 +758,27 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 39, Dec 2</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Deformers</strong> <a id="week14"></a></p>
+<p><strong>Skinning</strong> <a id="week14"></a></p>
 </div>
-<div class="paragraph">
-<p>FDD. Blend shapes.</p>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Assignment 12</strong> <a href="Labs/lab11-free.html">Free Play</a>: <strong>Due Dec 9</strong></p>
+</li>
+<li>
+<p><a href="https://www.skinning.org/direct-methods.pdf">Skinning short course (SIGGRAPH 2014)</a></p>
+</li>
+</ul>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Dec 7, Dec 9</p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="ulist">
-<ul>
-<li>
-<p><a id="week15"></a></p>
-</li>
-</ul>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Deformers</strong> <a id="week15"></a></p>
+</div>
+<div class="paragraph">
+<p>FDD. Blend shapes.</p>
 </div></div></td>
 </tr>
 </tbody>
@@ -861,7 +786,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-12 13:23:30 -0400
+Last updated 2021-08-26 17:28:50 -0400
 </div>
 </div>
 </body>
