--- a/Q1Guide.html
+++ b/Q1Guide.html
@@ -311,12 +311,15 @@ The origin of each triangle is at the bottom left corner.</p>
 <div class="paragraph">
 <p>9) Suppose we have an animation that runs at 24 fps. What does this mean? How many frames do we display in a minute? How much time passes between each frame?</p>
 </div>
+<div class="paragraph">
+<p>10) Suppose a character at position p = (1,5,0) is facing the direction fwd = (-1, -2, 0). Suppose the character&#8217;s field of view (fov) is 60 degrees. If another character is at position a = (2,3,0), can p see a?  Is a on the left or right of p? How far apart are they?</p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-26 20:57:40 -0400
+Last updated 2021-08-26 21:11:36 -0400
 </div>
 </div>
 </body>
