--- a/Q2Guide.html
+++ b/Q2Guide.html
@@ -39,6 +39,9 @@
 </li>
 </ul>
 </div>
+<div class="paragraph">
+<p>Unless explicitly asked to compute a final answer, it is sufficient to write out the formula and plug-in values.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -175,7 +178,7 @@ B3 = p_{i+1}\\\]
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-26 21:06:08 -0400
+Last updated 2021-08-26 21:10:16 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
