--- a/week01.html
+++ b/week01.html
@@ -139,6 +139,40 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 <h2 id="_introduction_to_animation">Introduction to animation</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p>Animation is the illusion of movement created by showing a series of static images very quickly (think: flipbook).</p>
+</div>
+<div class="paragraph">
+<p><strong>Framerate</strong></p>
+</div>
+<div class="paragraph">
+<p>The number of frames rendered (or displayed) each second. Typically measured in fps, or <strong>frames per second</strong>.
+For example, a framerate of 24 indicates that 24 frames are displayed each second. Conversely, the duration of
+each frame is 1/24.</p>
+</div>
+<div class="paragraph">
+<p><strong>Procedural animation</strong></p>
+</div>
+<div class="paragraph">
+<p>The animation is generated using an algorithm. Example might include a physical simulation or oscillating movement
+computed with sine and cosine.</p>
+</div>
+<div class="paragraph">
+<p><strong>Artist-driven animation</strong></p>
+</div>
+<div class="paragraph">
+<p>The animation is created by an artists, typicly using a technique called <strong>key-framing</strong>. In a key-framed
+animation, the artist specifies the state of objects in the scene at different times. <strong>Interpolation</strong> is
+then used to transition smoothly between keys.</p>
+</div>
+<div class="paragraph">
+<p><strong>Data-driven animation</strong></p>
+</div>
+<div class="paragraph">
+<p>The animation is generated from a recording of movement. A popular example is optical motion capture, where
+reflective markers are used to keep track of the locations of different joints and landmarks on the body.
+This technique may also use <strong>retargeting</strong> to fit the recorded motion to a character with different proportions.</p>
+</div>
+<div class="paragraph">
 <p>Further reading:</p>
 </div>
 <div class="ulist">
@@ -153,7 +187,7 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-26 17:33:49 -0400
+Last updated 2021-08-26 21:51:26 -0400
 </div>
 </div>
 </body>
