--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sept 21,23</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Interpolation</strong> <a id="week04"></a></p>
+<p><strong>Splines</strong> <a id="week04"></a></p>
 </div>
 <div class="paragraph">
 <p>Catmull-Rom splines. Hermite Splines.</p>
@@ -216,7 +216,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 19,21</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Transformations</strong> <a id="week08"></a></p>
+<p><strong>Skeletons</strong> <a id="week08"></a></p>
 </div>
 <div class="paragraph">
 <p>Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
