--- a/math-self-assessment.html
+++ b/math-self-assessment.html
@@ -15,10 +15,10 @@
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_animation_pre_requisites_self_assessment">Animation Pre-requisites: Self-assessment</a></li>
-<li><a href="#_trigonometry">Trigonometry</a></li>
-<li><a href="#_vectors">Vectors</a></li>
-<li><a href="#_matrices">Matrices</a></li>
-<li><a href="#_polynomials">Polynomials</a></li>
+<li><a href="#_trigonometry_anchortrig">Trigonometry anchor:trig[]</a></li>
+<li><a href="#_vectors">Vectors </a></li>
+<li><a href="#_matrices">Matrices </a></li>
+<li><a href="#_polynomials">Polynomials </a></li>
 </ul>
 </div>
 </div>
@@ -32,7 +32,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="_trigonometry">Trigonometry</h2>
+<h2 id="_trigonometry_anchortrig">Trigonometry anchor:trig[]</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Consider the point <strong>p</strong> and angle \(\theta\) below, where <strong>p</strong> is a distance of 1 unit from the origin and
@@ -53,7 +53,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="_vectors">Vectors</h2>
+<h2 id="_vectors">Vectors <a id="vector"></a></h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>A <strong>vector</strong> is an n-tuple of real numbers. In this class, we will work with 2D, 3D, and 4D vectors.
@@ -111,7 +111,7 @@ Suppose we have a vector <strong>u</strong>=(-2, 3, 0)<sup>T</sup> and <strong>v
 </div>
 </div>
 <div class="sect1">
-<h2 id="_matrices">Matrices</h2>
+<h2 id="_matrices">Matrices <a id="matrix"></a></h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Consider the following matrices</p>
@@ -145,7 +145,7 @@ C = \begin{bmatrix}
 <p>Compute the products AB and BA.</p>
 </li>
 <li>
-<p>Is it possible to multiply C times itself? Why not? What about CC<sup>T</sup></p>
+<p>Is it possible to multiply C times itself? Why not? What about CC<sup>T</sup>?</p>
 </li>
 <li>
 <p>What is the product of \(AA^{-1}\)?</p>
@@ -177,7 +177,7 @@ cos(30) &amp; sin(30) &amp; 0\\
 </div>
 </div>
 <div class="sect1">
-<h2 id="_polynomials">Polynomials</h2>
+<h2 id="_polynomials">Polynomials <a id="poly"></a></h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Consider the polynomial \(p(t) = 9t^3 + 6t^2\).</p>
@@ -196,7 +196,7 @@ cos(30) &amp; sin(30) &amp; 0\\
 </ul>
 </div>
 <div class="paragraph">
-<p>Let \(B_0(t) = (t - 1)^2\) and \(B_w = t - 2\).</p>
+<p>Let \(B_0(t) = (t - 1)^2\) and \(B_1 = t - 2\).</p>
 </div>
 <div class="ulist">
 <ul>
@@ -222,7 +222,7 @@ Standard form has the following pattern: \(a_nt^n + \ldots + a_2 t^2 + a t + a_0
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-27 13:34:59 -0400
+Last updated 2021-08-27 13:38:39 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
