--- a/schedule.html
+++ b/schedule.html
@@ -520,7 +520,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Sept 21,23</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Interpolation</strong> <a id="week04"></a></p>
+<p><strong>Splines</strong> <a id="week04"></a></p>
 </div>
 <div class="paragraph">
 <p>Catmull-Rom splines. Hermite Splines.</p>
@@ -603,7 +603,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 19,21</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Transformations</strong> <a id="week08"></a></p>
+<p><strong>Skeletons</strong> <a id="week08"></a></p>
 </div>
 <div class="paragraph">
 <p>Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
@@ -786,7 +786,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-26 17:28:50 -0400
+Last updated 2021-08-26 22:27:44 -0400
 </div>
 </div>
 </body>
