--- a/week01.html
+++ b/week01.html
@@ -127,11 +127,148 @@ for development. Do it! It&#8217;s a great idea. Make sure your code runs in the
 <h2 id="_math_overview">Math Overview</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Further reading:</p>
+<p>This class relies on vectors, matrices, and polynomials. Specifically,</p>
 </div>
 <div class="paragraph">
-<p>*
-* Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6</p>
+<p><strong>Trigonometry</strong></p>
+</div>
+<div class="paragraph">
+<p>Try the sample problems <a href="math-self-assessment.html#trig">here</a>.</p>
+</div>
+<div class="paragraph">
+<p>Background resources:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.khanacademy.org/math/trigonometry#trigonometry-right-triangles">Trigonometry of right triangles</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/trigonometry/unit-circle-trig-func">Sine, cosine, tangent</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>Vectors</strong></p>
+</div>
+<div class="paragraph">
+<p>Try the sample problems <a href="math-self-assessment.html#vector">here</a>.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>coordinate systems: axes, origin, \$\hat{i}, \hat{j}, \hat{k}\$</p>
+</li>
+<li>
+<p>adding, subtracting, scaling</p>
+</li>
+<li>
+<p>length and distance</p>
+</li>
+<li>
+<p>dot product</p>
+</li>
+<li>
+<p>cross product</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Background resources:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.khanacademy.org/math/linear-algebra/vectors-and-spaces">Vector spaces</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/algebra-home/alg-vectors">Vectors</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/linear-algebra/vectors-and-spaces/dot-cross-products/v/vector-dot-product-and-vector-length">Dot product and length</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/linear-algebra/vectors-and-spaces/dot-cross-products/v/linear-algebra-cross-product-introduction">Cross product</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>Matrices</strong></p>
+</div>
+<div class="paragraph">
+<p>Try the sample problems <a href="math-self-assessment.html#matrix">here</a>.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Zero matrix</p>
+</li>
+<li>
+<p>Identity matrix</p>
+</li>
+<li>
+<p>Matrix dimension</p>
+</li>
+<li>
+<p>Matrix-Matrix multiplication</p>
+</li>
+<li>
+<p>Matrix-Vector multiplation</p>
+</li>
+<li>
+<p>Inverse</p>
+</li>
+<li>
+<p>Transpose</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Background resources:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.khanacademy.org/math/precalculus/x9e81a4f98389efdf:matrices/x9e81a4f98389efdf:mat-intro/a/intro-to-matrices">Matrices</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/precalculus/x9e81a4f98389efdf:matrices/x9e81a4f98389efdf:multiplying-matrices-by-matrices/v/matrix-multiplication-intro">Matrix multiplication</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/linear-algebra/matrix-transformations/matrix-transpose/v/linear-algebra-transpose-of-a-matrix">Matrix Transpose</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/precalculus/x9e81a4f98389efdf:matrices/x9e81a4f98389efdf:properties-of-matrix-multiplication/a/intro-to-identity-matrices">Identity matrix</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/algebra-home/alg-matrices/alg-intro-to-matrix-inverses/v/inverse-matrix-part-1">Matrix inverse</a></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>Polynomials</strong></p>
+</div>
+<div class="paragraph">
+<p>Try the sample problems <a href="math-self-assessment.html#poly">here</a>.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Degree</p>
+</li>
+<li>
+<p>Manipulating expressions (algebra)</p>
+</li>
+<li>
+<p>Derivatives of polynomials</p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/algebra/x2f8bb11595b61c86:quadratics-multiplying-factoring/x2f8bb11595b61c86:multiply-monomial-polynomial/v/polynomials-intro">Polynomials</a></p>
+</li>
+<li>
+<p><a href="https://www.khanacademy.org/math/ap-calculus-ab/ab-differentiation-1-new/ab-2-6b/v/differentiating-polynomials-example">Differentiation of polynomials</a></p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -187,7 +324,7 @@ This technique may also use <strong>retargeting</strong> to fit the recorded mot
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-26 21:51:26 -0400
+Last updated 2021-08-27 13:44:46 -0400
 </div>
 </div>
 </body>
