--- a/week02.html
+++ b/week02.html
@@ -89,12 +89,22 @@
 </li>
 </ul>
 </div>
+<div class="paragraph">
+<p>Further reading:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Lengyel: Chapter 2, 3.1, Appendix B.1, B.2, B.3, B.6, B.6</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-08-26 17:25:11 -0400
+Last updated 2021-08-27 13:44:01 -0400
 </div>
 </div>
 </body>
